DSL-PLUGIN-1.1.23/src/main/java/dsl_plugin/generated_code/DSL_GRAMMARParser.java
// Generated from DSL_GRAMMAR.g4 by ANTLR 4.13.0
package dsl_plugin.generated_code;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DSL_GRAMMARParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, PAUSE_STATEMENT=37, 
		RED=38, GREEN=39, BLUE=40, YELLOW=41, PI=42, PI_DIV_EXPR=43, DECIMAL_LIT=44, 
		COORDINATE=45, LPAREN=46, RPAREN=47, SEMICOLON=48, COMMA=49, NUMBER=50, 
		VERSION=51, ID=52, WHITESPACE=53, COMMENT=54;
	public static final int
		RULE_program = 0, RULE_figure_standalone = 1, RULE_show_definition = 2, 
		RULE_drones_section = 3, RULE_sequence_section = 4, RULE_figure_in_show = 5, 
		RULE_mapping_section = 6, RULE_dslVersion = 7, RULE_declarations = 8, 
		RULE_declaration = 9, RULE_droneTypeDeclaration = 10, RULE_positionDeclaration = 11, 
		RULE_velocityDeclaration = 12, RULE_velocityExpr = 13, RULE_distanceDeclaration = 14, 
		RULE_figureDeclaration = 15, RULE_figureParam = 16, RULE_expression = 17, 
		RULE_statements = 18, RULE_statement = 19, RULE_beforeBlock = 20, RULE_afterBlock = 21, 
		RULE_groupBlock = 22, RULE_blockContent = 23, RULE_singleAction = 24, 
		RULE_figureAction = 25, RULE_distanceValue = 26, RULE_velocityValue = 27, 
		RULE_rotationValue = 28, RULE_colorValue = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "figure_standalone", "show_definition", "drones_section", 
			"sequence_section", "figure_in_show", "mapping_section", "dslVersion", 
			"declarations", "declaration", "droneTypeDeclaration", "positionDeclaration", 
			"velocityDeclaration", "velocityExpr", "distanceDeclaration", "figureDeclaration", 
			"figureParam", "expression", "statements", "statement", "beforeBlock", 
			"afterBlock", "groupBlock", "blockContent", "singleAction", "figureAction", 
			"distanceValue", "velocityValue", "rotationValue", "colorValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Show'", "'{'", "'}'", "'Drones'", "':'", "'Sequence'", "'Figure'", 
			"'Map'", "'->'", "'DSL'", "'version'", "'DroneType'", "'Position'", "'='", 
			"'Velocity'", "'Distance'", "'Line'", "'Rectangle'", "'Circle'", "'Circumference'", 
			"'-'", "'*'", "'/'", "'+'", "'before'", "'endbefore'", "'after'", "'endafter'", 
			"'group'", "'endgroup'", "'.'", "'lightsOn'", "'lightsOff'", "'move'", 
			"'movePos'", "'rotate'", null, "'RED'", "'GREEN'", "'BLUE'", "'YELLOW'", 
			"'PI'", null, null, null, "'('", "')'", "';'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "PAUSE_STATEMENT", "RED", "GREEN", "BLUE", "YELLOW", "PI", "PI_DIV_EXPR", 
			"DECIMAL_LIT", "COORDINATE", "LPAREN", "RPAREN", "SEMICOLON", "COMMA", 
			"NUMBER", "VERSION", "ID", "WHITESPACE", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DSL_GRAMMAR.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DSL_GRAMMARParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public DslVersionContext dslVersion() {
			return getRuleContext(DslVersionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DSL_GRAMMARParser.EOF, 0); }
		public Show_definitionContext show_definition() {
			return getRuleContext(Show_definitionContext.class,0);
		}
		public Figure_standaloneContext figure_standalone() {
			return getRuleContext(Figure_standaloneContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_GRAMMARVisitor ) return ((DSL_GRAMMARVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			dslVersion();
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(61);
				show_definition();
				}
				break;
			case EOF:
			case T__11:
			case T__12:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__24:
			case T__26:
			case T__28:
			case PAUSE_STATEMENT:
			case ID:
				{
				setState(62);
				figure_standalone();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(65);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Figure_standaloneContext extends ParserRuleContext {
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public Figure_standaloneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_figure_standalone; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).enterFigure_standalone(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).exitFigure_standalone(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_GRAMMARVisitor ) return ((DSL_GRAMMARVisitor<? extends T>)visitor).visitFigure_standalone(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Figure_standaloneContext figure_standalone() throws RecognitionException {
		Figure_standaloneContext _localctx = new Figure_standaloneContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_figure_standalone);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			declarations();
			setState(68);
			statements();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Show_definitionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DSL_GRAMMARParser.ID, 0); }
		public Drones_sectionContext drones_section() {
			return getRuleContext(Drones_sectionContext.class,0);
		}
		public Sequence_sectionContext sequence_section() {
			return getRuleContext(Sequence_sectionContext.class,0);
		}
		public Show_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_show_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).enterShow_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).exitShow_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_GRAMMARVisitor ) return ((DSL_GRAMMARVisitor<? extends T>)visitor).visitShow_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Show_definitionContext show_definition() throws RecognitionException {
		Show_definitionContext _localctx = new Show_definitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_show_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(T__0);
			setState(71);
			match(ID);
			setState(72);
			match(T__1);
			setState(73);
			drones_section();
			setState(74);
			sequence_section();
			setState(75);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Drones_sectionContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(DSL_GRAMMARParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(DSL_GRAMMARParser.ID, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(DSL_GRAMMARParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(DSL_GRAMMARParser.NUMBER, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(DSL_GRAMMARParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(DSL_GRAMMARParser.SEMICOLON, i);
		}
		public Drones_sectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drones_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).enterDrones_section(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).exitDrones_section(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_GRAMMARVisitor ) return ((DSL_GRAMMARVisitor<? extends T>)visitor).visitDrones_section(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Drones_sectionContext drones_section() throws RecognitionException {
		Drones_sectionContext _localctx = new Drones_sectionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_drones_section);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(T__3);
			setState(78);
			match(T__1);
			setState(83); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(79);
				match(ID);
				setState(80);
				match(T__4);
				setState(81);
				match(NUMBER);
				setState(82);
				match(SEMICOLON);
				}
				}
				setState(85); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(87);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Sequence_sectionContext extends ParserRuleContext {
		public List<Figure_in_showContext> figure_in_show() {
			return getRuleContexts(Figure_in_showContext.class);
		}
		public Figure_in_showContext figure_in_show(int i) {
			return getRuleContext(Figure_in_showContext.class,i);
		}
		public Sequence_sectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sequence_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).enterSequence_section(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).exitSequence_section(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_GRAMMARVisitor ) return ((DSL_GRAMMARVisitor<? extends T>)visitor).visitSequence_section(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sequence_sectionContext sequence_section() throws RecognitionException {
		Sequence_sectionContext _localctx = new Sequence_sectionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sequence_section);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(T__5);
			setState(90);
			match(T__1);
			setState(92); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(91);
				figure_in_show();
				}
				}
				setState(94); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__6 );
			setState(96);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Figure_in_showContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DSL_GRAMMARParser.ID, 0); }
		public Mapping_sectionContext mapping_section() {
			return getRuleContext(Mapping_sectionContext.class,0);
		}
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public Figure_in_showContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_figure_in_show; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).enterFigure_in_show(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).exitFigure_in_show(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_GRAMMARVisitor ) return ((DSL_GRAMMARVisitor<? extends T>)visitor).visitFigure_in_show(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Figure_in_showContext figure_in_show() throws RecognitionException {
		Figure_in_showContext _localctx = new Figure_in_showContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_figure_in_show);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__6);
			setState(99);
			match(ID);
			setState(100);
			match(T__1);
			setState(101);
			mapping_section();
			setState(102);
			declarations();
			setState(103);
			statements();
			setState(104);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Mapping_sectionContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(DSL_GRAMMARParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(DSL_GRAMMARParser.ID, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(DSL_GRAMMARParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(DSL_GRAMMARParser.SEMICOLON, i);
		}
		public Mapping_sectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mapping_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).enterMapping_section(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).exitMapping_section(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_GRAMMARVisitor ) return ((DSL_GRAMMARVisitor<? extends T>)visitor).visitMapping_section(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Mapping_sectionContext mapping_section() throws RecognitionException {
		Mapping_sectionContext _localctx = new Mapping_sectionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_mapping_section);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(T__7);
			setState(107);
			match(T__1);
			setState(112); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(108);
				match(ID);
				setState(109);
				match(T__8);
				setState(110);
				match(ID);
				setState(111);
				match(SEMICOLON);
				}
				}
				setState(114); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(116);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DslVersionContext extends ParserRuleContext {
		public TerminalNode VERSION() { return getToken(DSL_GRAMMARParser.VERSION, 0); }
		public TerminalNode SEMICOLON() { return getToken(DSL_GRAMMARParser.SEMICOLON, 0); }
		public DslVersionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dslVersion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).enterDslVersion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).exitDslVersion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_GRAMMARVisitor ) return ((DSL_GRAMMARVisitor<? extends T>)visitor).visitDslVersion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DslVersionContext dslVersion() throws RecognitionException {
		DslVersionContext _localctx = new DslVersionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dslVersion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(T__9);
			setState(119);
			match(T__10);
			setState(120);
			match(VERSION);
			setState(121);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationsContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).exitDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_GRAMMARVisitor ) return ((DSL_GRAMMARVisitor<? extends T>)visitor).visitDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2076672L) != 0)) {
				{
				{
				setState(123);
				declaration();
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public DroneTypeDeclarationContext droneTypeDeclaration() {
			return getRuleContext(DroneTypeDeclarationContext.class,0);
		}
		public PositionDeclarationContext positionDeclaration() {
			return getRuleContext(PositionDeclarationContext.class,0);
		}
		public VelocityDeclarationContext velocityDeclaration() {
			return getRuleContext(VelocityDeclarationContext.class,0);
		}
		public DistanceDeclarationContext distanceDeclaration() {
			return getRuleContext(DistanceDeclarationContext.class,0);
		}
		public FigureDeclarationContext figureDeclaration() {
			return getRuleContext(FigureDeclarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_GRAMMARVisitor ) return ((DSL_GRAMMARVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_declaration);
		try {
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				droneTypeDeclaration();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				positionDeclaration();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 3);
				{
				setState(131);
				velocityDeclaration();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 4);
				{
				setState(132);
				distanceDeclaration();
				}
				break;
			case T__16:
			case T__17:
			case T__18:
			case T__19:
				enterOuterAlt(_localctx, 5);
				{
				setState(133);
				figureDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DroneTypeDeclarationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DSL_GRAMMARParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(DSL_GRAMMARParser.SEMICOLON, 0); }
		public DroneTypeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_droneTypeDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).enterDroneTypeDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_GRAMMARListener ) ((DSL_GRAMMARListener)listener).exitDroneTypeDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_GRAMMARVisitor ) return ((DSL_GRAMMARVisitor<? extends T>)visitor).visitDroneTypeDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DroneTypeDeclarationContext droneTypeDeclaration() throws RecognitionException {
		DroneTypeDeclarationContext _localctx = new DroneTypeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_droneTypeDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(T__11);
			setState(137);
			match(ID);
			setState(138);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
